Clean up section 3 and add some references.

--- a/lsh_post1/lsh_post1.bib
+++ b/lsh_post1/lsh_post1.bib
@@ -1,36 +1,30 @@
-% TODO Clean this up once I have some real references here.
-
-@article{raney,
-  author  = {Raney, George},
-  title   = {Functional composition patterns and power series reversion},
-  journal = {Transactions of the American Mathematical Society},
-  year    = 1960,
-  volume  = 94,
-  pages   = {441--451}
+@article{broder2000min,
+  title={Min-wise independent permutations},
+  author={Broder, Andrei Z and Charikar, Moses and Frieze, Alan M and Mitzenmacher, Michael},
+  journal={Journal of Computer and System Sciences},
+  volume={60},
+  number={3},
+  pages={630--659},
+  year={2000},
+  publisher={Elsevier}
 }
 
-@book{concrete,
-  author    = {Knuth, Donald E. and Patashnik, Oren and Graham, Ronald L.},
-  title     = {Concrete mathematics: a foundation for computer science},
-  chapter   = 7,
-  publisher = {Addison-Wesley},
-  year      = 1997
+@article{dasgupta2003elementary,
+  title={An elementary proof of a theorem of Johnson and Lindenstrauss},
+  author={Dasgupta, Sanjoy and Gupta, Anupam},
+  journal={Random Structures \& Algorithms},
+  volume={22},
+  number={1},
+  pages={60--65},
+  year={2003},
+  publisher={Wiley Online Library}
 }
 
-@book{taocp1,
-  author    = {Knuth, Donald E.},
-  title     = {Fundamental Algorithms},
-  series    = {The Art of Computer Programming},
-  publisher = {Addison-Wesley},
-  volume    = 1,
-  edition   = {Third Ed.},
-  year      = 1998
-}
-
-@misc{s-j-t-alg,
-  author    = "Wikipedia",
-  title     = "Steinhaus-Johnson-Trotter algorithm --- {W}ikipedia{,} The Free Encyclopedia",
-  year      = 2015,
-  url       = "http://en.wikipedia.org/wiki/Steinhaus-Johnson-Trotter_algorithm",
-  note      = "[Online; accessed 6-June-2015]"
+@inproceedings{panigrahy2006entropy,
+  title={Entropy based nearest neighbor search in high dimensions},
+  author={Panigrahy, Rina},
+  booktitle={Proceedings of the seventeenth annual ACM-SIAM symposium on Discrete algorithm},
+  pages={1186--1195},
+  year={2006},
+  organization={Society for Industrial and Applied Mathematics}
 }
